# cpp-scraper

./: .gitignore  CMakeLists.txt  dynamic-scraper.cpp  static-scraper.cpp
